--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "description": "A js tool for satellite, geography and transformation around llh, mercator ,enu and others.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c",
+    "prepublishOnly": "npm run release",
+    "release": "npm run build:dev && npm run build:prod",
+    "build:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:dev": "cross-env NODE_ENV=development rollup -c"
   },
   "dependencies": {
-    "numeric": "^1.2.6"
+    "numeric": "^1.2.6",
+    "rollup": "^2.7.3",
+    "rollup-plugin-postcss": "^3.1.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
   },
   "repository": {
     "type": "git",
