--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
-    "prepublishOnly": "npm run release",
-    "release": "npm run build:dev && npm run build:prod",
-    "build:prod": "cross-env NODE_ENV=production rollup -c",
-    "build:dev": "cross-env NODE_ENV=development rollup -c"
+    "build": "rollup -c ./rollup.config.js"
   },
   "dependencies": {
     "numeric": "^1.2.6",
